# Netl

./: .gitignore  README.md  pyproject.toml
assets/logo/: resources.txt
src/netl/: __init__.py
