[project]
name = "netl"
version = "0.0.1"
description = "A node-based ETL pipeline builder powered by Polars - designed to be fast, flexible, and user-friendly."
readme = "README.md"
authors = [
    { name = "RedPandaMC", email = "jurreandenys@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
required-version = ">=0.12.0"

# Base line length; keep in sync with Black
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable error codes from Pyflakes (F), pycodestyle (E), warnings (W), complexity (C), and docstrings (D)
select = ["E", "F", "W", "C90", "D"]

# Always fixable when `--fix` is passed
fixable = ["ALL"]
unfixable = []

# Variables starting with dummy_ are allowed to be unused
dummy-variable-rgx = "^dummy_[A-Za-z0-9_]*$"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402"]

[tool.ruff.format]
# Quote style and trailing commas like Black
quote-style = "double"
# Use spaces, not tabs
indent-style = "space"
# Auto-detect line endings
line-ending = "auto"
# Docstring code formatting (opt-in)
docstring-code-line-length = "dynamic"

# – Mypy for static typing
[tool.mypy]
python_version = ">=3.12"
strict = true
disallow_incomplete_defs = true
show_error_codes = true

# – Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
